--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="description"
-          content="Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions">
-    <meta name="keywords" content="VLM, Humor Understanding, Juxtaposition">
+          content="YesBut Benchmark (Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions)">
+    <meta name="keywords" content="YesBut Benchmark, MLLM, VLM, Benchmark, Humor Understanding, Comparitive Reasoning">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions</title>
+    <title>Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions (YesBut Benchmark)</title>
 
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
           rel="stylesheet">
@@ -38,6 +38,11 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title"><br>Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions
             </h1>
+                <div class="is-size-5 publication-authors">
+                    <span class="author-block">YesBut Benchmark<br>
+                    </span>
+                </div>
+              
                 <div class="is-size-4 publication-authors">
                 <!-- Paper authors -->
                   <span class="author-block">
