--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title"><br>Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions
             </h1>
-                <div class="is-size-5 publication-authors">
+                <div class="is-size-4 publication-authors">
                     <span class="author-block">YesBut Benchmark<br>
                     </span>
                 </div>
@@ -98,7 +98,7 @@
 
                   <!-- ArXiv abstract Link -->
                   <span class="link-block">
-                    <a href="https://arxiv.org/html/2405.19088v1" target="_blank"
+                    <a href="https://arxiv.org/html/2405.19088" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="ai ai-arxiv"></i>
