--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1 class="title is-1 publication-title"><br>Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions
             </h1>
                 <div class="is-size-4 publication-authors">
-                    <span class="author-block">YesBut Benchmark<br>
+                    <span class="author-block"><font color = 'red';><b>[YesBut Benchmark]</b></font>< <br>
                     </span>
                 </div>
               
