--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="description"
-          content="YesBut Benchmark (Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions)">
+          content="[YesBut Benchmark] Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions">
     <meta name="keywords" content="YesBut Benchmark, MLLM, VLM, Benchmark, Humor Understanding, Comparitive Reasoning">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions (YesBut Benchmark)</title>
+    <title>[YesBut Benchmark] Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions (YesBut Benchmark)</title>
 
     <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
           rel="stylesheet">
@@ -36,13 +36,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title"><br>Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions
+            <h1 class="title is-1 publication-title"><br><font color = 'blue';><b>[<span class="dnerf"><b>YesBut</b> Benchmark]</b></font> Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions
             </h1>
-                <div class="is-size-4 publication-authors">
-                    <span class="author-block"><font color = 'red';><b>[YesBut Benchmark]</b></font>< <br>
-                    </span>
-                </div>
-              
                 <div class="is-size-4 publication-authors">
                 <!-- Paper authors -->
                   <span class="author-block">
@@ -148,7 +143,7 @@
       </div>
       <div class="content has-text-justified">
         <p>
-            We introduce the <span class="is-size-5 dnerf"><b>YesBut</b> </span> dataset to examine VLMs' capability in understanding humor, with a specific emphasis on humor derived from contrasting narratives (juxtaposition). (Comic by Anton Gudim)
+            We introduce the </span> <font color = 'blue';><b><span class="is-size-5 dnerf"><b>YesBut</b> Benchmark</b></font> to examine VLMs' capability in understanding humor, with a specific emphasis on humor derived from contrasting narratives (juxtaposition). (Comic by Anton Gudim)
         </p>
         
     </div>
@@ -166,8 +161,8 @@
       <div class="content has-text-justified">
         <p>
           Recent advancements in large multimodal language models have demonstrated remarkable proficiency across a wide range of tasks. 
-          Yet, these models still struggle with understanding the nuances of human humor through juxtaposition, particularly when it involves nonlinear narratives that underpin many jokes and humor cues.  This paper investigates this challenge by focusing on comics with contradictory narratives, where each comic consists of two panels that create a humorous contradiction. 
-          We introduce the <span class="dnerf"><b>YesBut</b> </span> benchmark, which comprises tasks of varying difficulty aimed at assessing AI's capabilities in recognizing and interpreting these comics, ranging from literal content comprehension to deep narrative reasoning. 
+          Yet, these models still struggle with understanding the nuances of human humor through juxtaposition, particularly when it involves nonlinear narratives that underpin many jokes and humor cues.  <b>This paper investigates this challenge by focusing on comics with contradictory narratives, where each comic consists of two panels that create a humorous contradiction.</b>
+          <u>We introduce the </span> <font color = 'blue';><b><span class="is-size-5 dnerf"><b>YesBut</b> Benchmark</b></font>, which comprises tasks of varying difficulty aimed at assessing AI's capabilities in recognizing and interpreting these comics, ranging from literal content comprehension to deep narrative reasoning. </u>
           Through extensive experimentation and analysis of recent commercial or open-sourced large (vision) language models, we assess their capability to comprehend the complex interplay of the narrative humor inherent in these comics. Our results show that even state-of-the-art models still lag behind human performance on this task. Our findings offer insights into the current limitations and potential improvements for AI in understanding human creative expressions.
         </p>
     </div>
@@ -180,8 +175,8 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <div class="columns is-centered has-text-centered">
-        <h2 class="title is-3"><span class="dnerf">YesBut</span> Dataset Overview</h2>
-      </div>
+        <h2 class="title is-3"></span> <font color = 'blue';><b><span class="dnerf"><b>YesBut</b> Benchmark</b></font></span> Overview</h2>
+      </div> 
       <div class="content has-text-justified">
         <p>
           Our benchmark consists of <span class="dnerf">YesBut</span> comics featuring contradictory narratives. Specifically, each sample includes:<br>
