--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                   <span class="author-block">
                   <a href="https://www.linkedin.com/in/%E4%BA%91%E6%9D%A5-%E5%91%A8-932a022aa/?locale=en_US" target="_blank">Yunlai Zhou<sup>2</sup></a>,</span>
                   <span class="author-block">
-                  <a href="https://www.linkedin.com/in/yiran-qiao-10298b238/" target="_blank">Yiran Qiao<sup>2</sup></a>,</span>
+                  <a href="https://scholar.google.com/citations?user=XdvVFb0AAAAJ&hl=en" target="_blank">Yiran Qiao<sup>2</sup></a>,</span>
                   <span class="author-block">
                   <a href="https://jma712.github.io/" target="_blank">Jing Ma<sup>2</sup></a>,</span>
                   <span class="author-block">
