--- a/index.html
+++ b/index.html
@@ -383,10 +383,13 @@
         <p>If you find our work helpful, please consider cite us:</p>
         <pre><code>@article{hu2024cracking,
           title={Cracking the Code of Juxtaposition: Can AI Models Understand the Humorous Contradictions},
-          author={Zhe Hu, Tuo Liang, Jing Li, Yiren Lu, Yunlai Zhou, Yiran Qiao, Jing Ma, Yu Yin},
-          journal={arXiv preprint arXiv:2405.19088},
+          author={Hu, Zhe and Liang, Tuo and Li, Jing and Lu, Yiren and Zhou, Yunlai and Qiao, Yiran and Ma, Jing and Yin, Yu},
+          journal={Advances in Neural Information Processing Systems},
+          volume={37},
+          pages={47166--47188},
           year={2024}
           }
+}
 </code></pre>
     </div>
 </section>
