update survey link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                   <span class="author-block">
                   <a href="https://jma712.github.io/" target="_blank">Jing Ma<sup>2</sup></a>,</span>
                   <span class="author-block">
-                  <a href="https://yin-yu.github.io/" target="_blank">Yu Yin<sup>2</sup></a>
+                  <a href="https://yin-yu.github.io/" target="_blank">Yu Yin<sup>2 &#9993;</sup></a>
                   </span>
                 </div>
 
